<resources>
    <string name="app_name">Xəbərçi</string>
    <string name="welcome_text">Xoş Gəldin!</string>
    <string name="first_screen_description">
        Salam, dəyərli istifadəçi! Proqramımızda səni görməyə şad olduq.
    </string>
    <string name="novbeti">Növbəti</string>
    <string name="second_highlight">Bütün xəbərlər bir app-də</string>
    <string name="second_description">Bütün dünya xəbərləri sənin əlinin altında olacaq</string>
    <string name="third_highlight">Başlayaq!</string>
    <string name="third_description">Proqramımızla tanış olduğunuza görə artıq proqramı işə sala bilərik.</string>
    <string name="bitdi">Bitdi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="axtar">Axtar...</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="account">Account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

</resources>